# extension-with-docs

./: .gitignore  404.html  README.md  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
ExtensionWithDocs/: index.html
docs/: ExtensionWithDocs.md  index.md
examples/extension_with_docs_example/: pyproject.toml
examples/extension_with_docs_example/src/: main.py
src/extension_with_docs/: __init__.py  extension_with_docs.py
src/flutter/extension_with_docs/: README.md  pubspec.yaml
src/flutter/extension_with_docs/lib/: extension_with_docs.dart
src/flutter/extension_with_docs/lib/src/: create_control.dart  extension_with_docs.dart
