[project]
name = "extension-with-docs"
version = "0.1.0"
description = "ExtensionWithDocs control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.27.4",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/extension-with-docs"
Repository = "https://github.com/MyGithubAccount/extension-with-docs"
Issues = "https://github.com/MyGithubAccount/extension-with-docs/issues"

[tool.setuptools.package-data]
"flutter.extension_with_docs" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.4",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.4"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
